Evening reporting, report & root landing pages

--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,6 @@
--start according to instructions
-	-file structure etc.
+-weekly summaries
+-monthly summaries
+-registration & authentication
+
+
+
