Last week/month summaries

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,9 @@
--weekly summaries
--monthly summaries
+-summaries
+	-any week
+	-handling no data
+-prevent reporting multiple times
 -registration & authentication
+	-...
 
 
 
