--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,15 @@
--change to 2 database tables (both reports in same table)
--summaries
-	-change summary handling function for easier queries (get specified week/month)
-	-any week/month
-	-handling no data
--new report deletes old report
--cleanup & checks
+-style library
 -registration & authentication
-	-...
+-cleanup & checks
+-prevent sql injection
+-implement remaining APIs
+-consult checklist
+	
+-Apis: routes that are used for building APIs
+-Controllers: routes that are related to creating views
+-Services: controllers and APIs rely on services (abstracting away functionality)
+
+
 
 
 
