--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,25 @@
--consult checklist
+-fix bcrypt dependency import
+-separate test/production configs
+-registration form validation, error messages
+-login: show error message when credentials are invalid
+-logout: button at /auth/logout
+-middlewares:
+	-logging middleware
+	-improve auth middleware (check reqs)
+-reporting:
+	-date populated by default (today)
+	-validation, errors
+-summary: indicate that default/other statistics are shown
+-application description on landing page
+-testing
+-prevent sql injection
+-database connection pool
+-remove database credentials from code
+-use partials for validation errors
+-logged in message at the top of the page
+-documentation
+-usability improvements
+-code cleanup
 
 -Apis: routes that are used for building APIs
 -Controllers: routes that are related to creating views
