--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,3 @@
-FIRST (pe):
--application description on landing page
-
 NEXT (la, su):
 -registration form validation, error messages
 -middlewares:
@@ -8,15 +5,15 @@ NEXT (la, su):
 	-improve auth middleware (check reqs)
 -reporting:
 	-date populated by default (today)
-	-validation, errors
+	-validation, error messages
 -use partials for validation errors
+-usability improvements
 
 FINAL (final week):
 -testing
 -separate test/production configs
 -remove database credentials from code
 -documentation
--usability improvements
 -code cleanup
 
 -Apis: routes that are used for building APIs
