--- a/todo.txt
+++ b/todo.txt
@@ -3,7 +3,6 @@ NEXT (su):
 	-logging middleware
 	-improve auth middleware (check reqs)
 -reporting:
-	-date populated by default (today)
 	-validation, error messages
 
 FINAL (final week):
@@ -26,6 +25,9 @@ Can leave out max 7 requirements for grade 5:
 -deployment (2 + 2 from documentation)
 -tests(4)
 => leave out deployment
+
+Notes for docs:
+-generic mood is required (cannot be "no mood")
 
 
 
