--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
-FINAL (ti-pe):
--landing page: high-level summaries (from api)
+FINAL (ke-to):
 -automated testing (20 tests)
--manual testing
--documentation
+-finish documentation
+-final checks
+-remove database credentials
+-return zip file (src + doc)
 
 -Apis: routes that are used for building APIs
 -Controllers: routes that are related to creating views
@@ -16,11 +17,22 @@ Can leave out max 6 requirements for grade 5:
 -deployment (1 + 1 from docs)
 -configs (1)
 -database creds in code (1)
+-table indices (1)
 
 Notes for docs:
 -generic mood is required (cannot be "no mood")
 -times are between 0 and 24 hours
 
+
+Returning the project is done by returning a zip file that contains the project source code. 
+The zip file should contain also instructions for running the project, necessary CREATE TABLE statements, 
+required configurations, an internet address where the application can be tried out, and any other 
+documentation laid out in the more detailed checklist below.
+
+Documentation contains necessary CREATE TABLE statements needed to create the database used by the application
+Documentation contains the address at which the application can currently be accessed
+Documentation contains guidelines for running the application
+Documentation contains guidelines for running tests
 
 
 
